Creation of Annotation generator Open Api 3.0
