# app/Http/Controllers/ProductsController.php
@@ -8,6 +8,7 @@ class ProductsController extends Controller
     {
         //
     }
+
     public function create()
     {
         //
@@ -20,28 +21,45 @@ class ProductsController extends Controller
 
     /**
      * @OA\Get(
-     *      path="api/products/{product}",
-     *      summary="Get list of clients",
-     *      description="Returns client detail",
+     *      path="api/prods/id/{id}",
+     *      summary="List Product",
+     *      description="List Product",
      *      @OA\Response(
      *          response=200,
      *          description="successful operation"
      *       ),
      *      @OA\Parameter(
      *      in="path",
-     *      name="product",
+     *      name="id",
      *      required=true,
-     *      @OA\Schema(type="string")
+     *      @OA\Schema(type="integer")
      *       )
-    
      *     )
-     *
      */
     
     public function show(string $id)
     {
         //
     }
+
+    /**
+     * @OA\Get(
+     *      path="api/prods/id/{id}/edit",
+     *      summary="Edit Product",
+     *      description="Edit Product",
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation"
+     *       ),
+     *      @OA\Parameter(
+     *      in="path",
+     *      name="id",
+     *      required=true,
+     *      @OA\Schema(type="integer")
+     *       )
+     *     )
+     */
+    
     public function edit(string $id)
     {
         //
@@ -49,22 +67,20 @@ class ProductsController extends Controller
 
     /**
      * @OA\Put(
-     *      path="api/products/{product}",
-     *      summary="Get list of clients",
-     *      description="Returns client detail",
+     *      path="api/prods/id/{id}",
+     *      summary="Update Product",
+     *      description="Update Product",
      *      @OA\Response(
      *          response=200,
      *          description="successful operation"
      *       ),
      *      @OA\Parameter(
      *      in="path",
-     *      name="product",
+     *      name="id",
      *      required=true,
-     *      @OA\Schema(type="string")
+     *      @OA\Schema(type="integer")
      *       )
-    
      *     )
-     *
      */
     
     public function update(Request $request, string $id)
@@ -74,22 +90,20 @@ class ProductsController extends Controller
 
     /**
      * @OA\Delete(
-     *      path="api/products/{product}",
-     *      summary="Get list of clients",
-     *      description="Returns client detail",
+     *      path="api/prods/id/{id}",
+     *      summary="Delete Product",
+     *      description="Delete Product",
      *      @OA\Response(
      *          response=200,
      *          description="successful operation"
      *       ),
      *      @OA\Parameter(
      *      in="path",
-     *      name="product",
+     *      name="id",
      *      required=true,
-     *      @OA\Schema(type="string")
+     *      @OA\Schema(type="integer")
      *       )
-    
      *     )
-     *
      */
     
     public function destroy(string $id)
@@ -99,9 +113,9 @@ class ProductsController extends Controller
 
     /**
      * @OA\Get(
-     *      path="api/altro/{id}/{project_id}",
-     *      summary="Get list of clients",
-     *      description="Returns client detail",
+     *      path="api/altro/{id}/{name}",
+     *      summary="List Product",
+     *      description="List Product",
      *      @OA\Response(
      *          response=200,
      *          description="successful operation"
@@ -110,18 +124,15 @@ class ProductsController extends Controller
      *      in="path",
      *      name="id",
      *      required=true,
-     *      @OA\Schema(type="string")
-     *       )
-    ,
+     *      @OA\Schema(type="integer")
+     *       ),
      *      @OA\Parameter(
      *      in="path",
-     *      name="project_id",
+     *      name="name",
      *      required=true,
      *      @OA\Schema(type="string")
      *       )
-    
      *     )
-     *
      */
     
     public function myMethod(){
